@@ -1,6 +1,7 @@
 Revision history for Modern::Perl
 
 {{$NEXT}}
+    - fixed t/year_imports.t for 5.10 (ANDK and sprout again)
 
 1.20120126 2012-01-25 22:15:50 America/Los_Angeles
     - fixed t/regressions.t for 5.10
